src/objects/License__c.object
<CustomObject>
    <description>This object is used the Service Operations License team</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_1__c</fullName>
        <inlineHelpText>Bill Address first line</inlineHelpText>
        <label>Mailing To Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_2__c</fullName>
        <inlineHelpText>Billing Address line 2</inlineHelpText>
        <label>Mailing To Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <inlineHelpText>Billing City</inlineHelpText>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <inlineHelpText>Billing Country</inlineHelpText>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <inlineHelpText>Billing State/Province</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Billing Zip/Postal Code</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1111</fullName>
                </value>
                <value>
                    <fullName>2222</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Date that the license expires.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issuing_Authority__c</fullName>
        <label>Issuing Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Category__c</fullName>
        <label>License Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business License</fullName>
                </value>
                <value>
                    <fullName>Tax License</fullName>
                </value>
                <value>
                    <fullName>Contractor License</fullName>
                </value>
                <value>
                    <fullName>Gaming License</fullName>
                </value>
                <value>
                    <fullName>Remove additional types</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Coverage__c</fullName>
        <inlineHelpText>What type of coverage is the license applicable to?</inlineHelpText>
        <label>License Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Name__c</fullName>
        <inlineHelpText>Description</inlineHelpText>
        <label>License Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Nbr__c</fullName>
        <inlineHelpText>Unique license/tax nbr</inlineHelpText>
        <label>License Nbr</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <inlineHelpText>What type of a license/tax is this?</inlineHelpText>
        <label>License Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Coverage__c</fullName>
        <inlineHelpText>What is the Other Coverage?</inlineHelpText>
        <label>Other Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>What form of payment did we make the payment with?</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Website__c</fullName>
        <inlineHelpText>Website used for Renewals</inlineHelpText>
        <label>Renewal Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Responsible_Managing_Employee_Fourth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Managing Employee (Fourth)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses (Responsible Managing Employee (Fourth))</relationshipLabel>
        <relationshipName>Licenses4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Managing_Employee_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Managing Employee (Primary)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses (Responsible Managing Employee (Primary))</relationshipLabel>
        <relationshipName>License_RME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Managing_Employee_Second__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Managing Employee (Second)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses (Responsible Managing Employee (Second))</relationshipLabel>
        <relationshipName>Licenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Managing_Employee_Third__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Managing Employee (Third)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses (Responsible Managing Employee (Third))</relationshipLabel>
        <relationshipName>Licenses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Note__c</fullName>
        <label>Status Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>Website used for License requirements</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Issuing_Authority__c</columns>
        <columns>License_Nbr__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State_Province__c</columns>
        <columns>Other_Coverage__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIC-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Coverage_Class_equals_Other</fullName>
        <active>true</active>
        <description>If the Coverage Class = Other then the user must enter something into the Other Coverage Class field.</description>
        <errorConditionFormula>(ISBLANK(Other_Coverage__c ) &amp;&amp; Text(License_Coverage__c)= &quot;Other&quot;)</errorConditionFormula>
        <errorDisplayField>Other_Coverage__c</errorDisplayField>
        <errorMessage>If License Coverage = Other the Other Coverage field must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_is_Suspended_or_Cancelled</fullName>
        <active>true</active>
        <description>If Status = Suspended or Cancelled the Status Notes cannot be blank</description>
        <errorConditionFormula>AND(
OR (Text( Status__c)= &quot;Suspended&quot;, Text( Status__c) =&quot;Cancelled&quot;),
ISBLANK( Status_Note__c))</errorConditionFormula>
        <errorDisplayField>Status_Note__c</errorDisplayField>
        <errorMessage>If the Status is Suspended or Cancelled you must add a Status Note.</errorMessage>
    </validationRules>
</CustomObject>